--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">s195490 William Mortensen meme af en galgeleg</string>
+    <string name="app_name">s195490 William Mortensen galgeleg</string>
 </resources>
